--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/core": "^7.12.17",
     "@babel/preset-env": "^7.12.17",
     "babel-loader": "^8.2.2",
+    "bootstrap": "^5.0.0-beta2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
     "dotenv": "^8.2.0",
