--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "@here/maps-api-for-javascript": "^1.22.0",
     "axios": "^0.21.1",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "mathjs": "^9.2.0"
   },
   "scripts": {
     "dev": "webpack serve --mode development",
@@ -27,6 +28,8 @@
     "html-loader": "^2.0.0",
     "html-webpack-plugin": "^5.1.0",
     "style-loader": "^2.0.0",
+    "svgo": "^1.3.2",
+    "svgo-loader": "^2.2.1",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
